# ai-company

./: .env.example  .gitignore  pyproject.toml
src/ai_company/: __init__.py  __main__.py  logging.py  main.py
src/ai_company/agents/: __init__.py  orchestrator.py
src/ai_company/config/: __init__.py  settings.py
src/ai_company/config/prompts/: engineer.md  orchestrator.md  planner.md  researcher.md  reviewer.md
src/ai_company/state/: models.py  store.py
tests/: test_cli.py  test_config.py  test_models.py  test_orchestrator.py  test_store.py
